# toeic4all-apis

./: .gitignore  Dockerfile  main.py  pyproject.toml  run_server.py  toeic4all-apis-postman-collection.json
app/: config.py  main.py
app/db/: mongodb.py  redis_client.py
app/middleware/: auth_middleware.py  rate_limit.py
app/routes/: auth.py
app/routes/api/: part5_api.py  part6_api.py  part7_api.py
app/schemas/: common.py
app/schemas/api/: part5_api_schemas.py  part6_api_schemas.py  part7_api_schemas.py
app/services/: cache_service.py  query_service.py
app/utils/: factory.py  logger.py  monitoring.py
app/utils/models/: part1_question.py  part2_question.py  part3_question.py  part4_question.py  part5_question.py  part6_question.py  part7_question.py
deploy/toeic4all-apis/: Chart.yaml  values.yaml
deploy/toeic4all-apis/templates/: deployment.yaml  service.yaml
